--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       background: #000;
       color: #fff;
       font-family: 'Bebas Neue', Arial, sans-serif;
-      text-align: center;
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      text-align: center;
     }
 
     /* HERO SECTION */
@@ -33,16 +33,27 @@
       padding: 2rem;
     }
 
-    .text-block {
-      text-transform: uppercase;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
-      line-height: 1.1;
+    .hero-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1.5rem;
+    }
+
+    .hero-logo {
+      width: 200px;
+      max-width: 70%;
+      opacity: 0.9;
+    }
+
+    .tagline {
+      font-size: 2.2rem;
+      letter-spacing: 3px;
     }
 
     @media (min-width: 768px) {
-      .text-block {
-        font-size: 4.5rem;
+      .tagline {
+        font-size: 3.5rem;
       }
     }
 
@@ -70,30 +81,33 @@
       padding: 0.5rem 1rem;
       border: none;
       border-radius: 4px;
+      background: #222;
+      color: #fff;
     }
 
     .video-grid {
       display: grid;
       gap: 2rem;
+      transition: grid-template-columns 0.3s ease;
     }
 
     .video-item {
       background: #000;
       padding: 1rem;
       border-radius: 10px;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
+    }
+
+    .video-item:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
     }
 
     iframe {
       width: 100%;
-      height: 200px;
+      aspect-ratio: 16 / 9;
       border-radius: 10px;
       border: none;
-    }
-
-    @media (min-width: 768px) {
-      iframe {
-        height: 300px;
-      }
     }
 
     .footer {
@@ -105,16 +119,23 @@
       color: #00aaff;
       text-decoration: none;
     }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
   <!-- HERO SECTION -->
   <div class="hero">
-    <div class="text-block">
-      <div>NEW</div>
-      <div>HIT PLAY WEBSITE</div>
-      <div>COMING SOON</div>
+    <div class="hero-content">
+      <img 
+        src="placeholder-logo.png" 
+        alt="Hit Play Logo" 
+        class="hero-logo"
+      />
+      <div class="tagline">COMING SOON</div>
     </div>
   </div>
 
@@ -124,17 +145,21 @@
 
     <!-- FILTER CONTROLS -->
     <div class="filters">
-      <select id="viewType">
-        <option value="grid">Grid View</option>
-        <option value="list">List View</option>
-      </select>
+      <label>
+        <select id="viewType">
+          <option value="grid">Grid View</option>
+          <option value="list">List View</option>
+        </select>
+      </label>
 
-      <select id="columns">
-        <option value="1">1 Column</option>
-        <option value="2" selected>2 Columns</option>
-        <option value="3">3 Columns</option>
-        <option value="4">4 Columns</option>
-      </select>
+      <label>
+        <select id="columns">
+          <option value="1">1 Column</option>
+          <option value="2" selected>2 Columns</option>
+          <option value="3">3 Columns</option>
+          <option value="4">4 Columns</option>
+        </select>
+      </label>
     </div>
 
     <!-- VIDEO GRID -->
