--- a/index.html
+++ b/index.html
@@ -46,17 +46,6 @@
       opacity: 0.9;
     }
 
-    .tagline {
-      font-size: 2.2rem;
-      letter-spacing: 3px;
-    }
-
-    @media (min-width: 768px) {
-      .tagline {
-        font-size: 3.5rem;
-      }
-    }
-
     /* VIDEOS */
     .videos-section {
       background: #111;
@@ -105,110 +94,4 @@
 
     iframe {
       width: 100%;
-      aspect-ratio: 16 / 9;
-      border-radius: 10px;
-      border: none;
-    }
-
-    .footer {
-      padding: 2rem 1rem;
-      font-size: 1.2rem;
-    }
-
-    .footer a {
-      color: #00aaff;
-      text-decoration: none;
-    }
-
-    .footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- HERO SECTION -->
-  <div class="hero">
-    <div class="hero-content">
-      <img 
-        src="placeholder-logo.png" 
-        alt="Hit Play Logo" 
-        class="hero-logo"
-      />
-      <div class="tagline">COMING SOON</div>
-    </div>
-  </div>
-
-  <!-- VIDEOS SECTION -->
-  <div class="videos-section">
-    <h2>VIDEOS</h2>
-
-    <!-- FILTER CONTROLS -->
-    <div class="filters">
-      <label>
-        <select id="viewType">
-          <option value="grid">Grid View</option>
-          <option value="list">List View</option>
-        </select>
-      </label>
-
-      <label>
-        <select id="columns">
-          <option value="1">1 Column</option>
-          <option value="2" selected>2 Columns</option>
-          <option value="3">3 Columns</option>
-          <option value="4">4 Columns</option>
-        </select>
-      </label>
-    </div>
-
-    <!-- VIDEO GRID -->
-    <div id="videoGrid" class="video-grid">
-      <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/WJdZaOJPA7I" allowfullscreen></iframe>
-      </div>
-
-      <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/Zpk1yvpMyGQ" allowfullscreen></iframe>
-      </div>
-
-      <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/4Bp_lgDdu08" allowfullscreen></iframe>
-      </div>
-
-      <div class="video-item">
-        <iframe src="https://www.youtube.com/embed/QCKoSx9yPSY" allowfullscreen></iframe>
-      </div>
-    </div>
-  </div>
-
-  <!-- FOOTER -->
-  <div class="footer">
-    More from the 
-    <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
-      Florida Punk Archivist
-    </a>
-  </div>
-
-  <!-- SCRIPTS -->
-  <script>
-    const grid = document.getElementById("videoGrid");
-    const viewType = document.getElementById("viewType");
-    const columns = document.getElementById("columns");
-
-    function updateGrid() {
-      if (viewType.value === "list") {
-        grid.style.gridTemplateColumns = "1fr";
-      } else {
-        grid.style.gridTemplateColumns = `repeat(${columns.value}, 1fr)`;
-      }
-    }
-
-    viewType.addEventListener("change", updateGrid);
-    columns.addEventListener("change", updateGrid);
-
-    updateGrid();
-  </script>
-
-</body>
-</html>
+      aspect-ra
