--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
 
   <!-- FOOTER -->
   <div class="footer">
-    More from the 
+    Visit The
     <a href="https://www.youtube.com/channel/UC63N1yWiGhzL2E9hcfFDJoQ" target="_blank">
       Florida Punk Archivist
-    </a>
+    </a>Youtube Channel
   </div>
 
   <!-- SCRIPT -->
   <script>
-    const API_KEY = "YOUR_NEW_API_KEY_HERE";   // <-- insert your API key
+    const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";   // <-- insert your API key
     const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
     let nextPageToken = "";
