--- a/index.html
+++ b/index.html
@@ -166,8 +166,12 @@
         nextPageToken = data.nextPageToken || "";
 
         data.items.forEach(item => {
-          // Only show public videos
-          if (item.id.kind === "youtube#video" && item.snippet) {
+          // Only show public uploaded videos (no live/upcoming)
+          if (
+            item.id.kind === "youtube#video" &&
+            item.snippet &&
+            item.snippet.liveBroadcastContent === "none"
+          ) {
             const vid = item.id.videoId;
             const thumb = item.snippet.thumbnails.high.url;
 
