--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
   <!-- SCRIPT -->
   <script>
-    const API_KEY = "YOUR_NEW_API_KEY_HERE";   // <-- insert your API key
+    const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";   // <-- insert your API key
     const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
     let nextPageToken = "";
