--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
       }
     }
 
+    /* Extra-large screens: desktops and 1080p+ TVs */
+    @media (min-width: 1200px) {
+      .video-list {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+
     .video-item {
       background: #000;
       padding: 0.5rem;
