--- a/index.html
+++ b/index.html
@@ -53,22 +53,21 @@
       margin-bottom: 2rem;
     }
 
-    /* Responsive, stretch-to-fit video grid */
     .video-list {
-      display: grid;
-      gap: 1rem;               /* small margin between videos */
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 0 1rem;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
 
     .video-item {
       background: #000;
-      padding: 0.5rem;
+      padding: 1rem;
       border-radius: 10px;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
       position: relative;
       overflow: hidden;
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
     }
 
     .video-item:hover {
