--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      min-height: 200px; /* ensures hero section is always visible */
+      min-height: 200px;
     }
 
     .hero-logo {
@@ -48,7 +48,7 @@
       margin-bottom: 2rem;
     }
 
-    /* Responsive, stretch-to-fit video grid */
+    /* Responsive grid */
     .video-list {
       display: grid;
       gap: 1rem;               
@@ -78,6 +78,7 @@
       aspect-ratio: 16/9;
       object-fit: cover;
       opacity: 0.85;
+      transition: opacity 0.3s ease;
     }
 
     .play-overlay {
@@ -99,6 +100,18 @@
       display: block;
     }
 
+    iframe.preview {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 10px;
+      pointer-events: none;
+      z-index: 10;
+    }
+
     .footer {
       padding: 2rem 1rem;
       font-size: 1.2rem;
@@ -117,9 +130,7 @@
 <body>
 
   <!-- HERO -->
-  <div class="hero" id="heroLogoContainer">
-    <!-- Channel logo will be inserted here dynamically -->
-  </div>
+  <div class="hero" id="heroLogoContainer"></div>
 
   <!-- VIDEOS -->
   <div class="videos-section">
@@ -137,7 +148,7 @@
 
   <!-- SCRIPT -->
   <script>
-    const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";   // <-- insert your API key
+    const API_KEY = "AIzaSyAr8RIreQq2cnTLAKJCUSaRqpvycY7-by8";
     const CHANNEL_ID = "UC63N1yWiGhzL2E9hcfFDJoQ";
 
     let nextPageToken = "";
@@ -146,27 +157,19 @@
     const videoListDiv = document.getElementById("videoList");
     const heroLogoContainer = document.getElementById("heroLogoContainer");
 
-    // Load channel logo dynamically using snippet.thumbnails.high
+    // Load channel logo
     async function loadChannelLogo() {
       try {
         const res = await fetch(`https://www.googleapis.com/youtube/v3/channels?part=snippet&id=${CHANNEL_ID}&key=${API_KEY}`);
         const data = await res.json();
-
         if (data.items && data.items.length > 0) {
           const logoUrl = data.items[0].snippet.thumbnails.high.url;
-
           const img = document.createElement("img");
           img.src = logoUrl;
           img.alt = "Channel Logo";
           img.className = "hero-logo";
-
-          img.onload = () => {
-            heroLogoContainer.appendChild(img);
-          };
-
-          img.onerror = () => {
-            console.error("Failed to load channel logo");
-          };
+          img.onload = () => heroLogoContainer.appendChild(img);
+          img.onerror = () => console.error("Failed to load channel logo");
         }
       } catch (err) {
         console.error("Error fetching channel logo:", err);
@@ -180,10 +183,7 @@
       if (loading) return;
       loading = true;
 
-      const url =
-        `https://www.googleapis.com/youtube/v3/search?` +
-        `key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id` +
-        `&order=date&maxResults=50&pageToken=${nextPageToken}`;
+      const url = `https://www.googleapis.com/youtube/v3/search?key=${API_KEY}&channelId=${CHANNEL_ID}&part=snippet,id&order=date&maxResults=50&pageToken=${nextPageToken}`;
 
       try {
         const response = await fetch(url);
@@ -191,11 +191,7 @@
         nextPageToken = data.nextPageToken || "";
 
         data.items.forEach(item => {
-          if (
-            item.id.kind === "youtube#video" &&
-            item.snippet &&
-            item.snippet.liveBroadcastContent === "none"
-          ) {
+          if (item.id.kind === "youtube#video" && item.snippet && item.snippet.liveBroadcastContent === "none") {
             const vid = item.id.videoId;
             const thumb = item.snippet.thumbnails.high.url;
 
@@ -206,6 +202,9 @@
               <div class="play-overlay">▶</div>
             `;
             videoListDiv.appendChild(container);
+
+            // Hover preview
+            addHoverPreview(container, vid);
           }
         });
 
@@ -222,21 +221,17 @@
     // Lazy-load iframes
     function observeLazyVideos() {
       const lazyElements = document.querySelectorAll(".video-thumb:not([data-loaded])");
-
       const observer = new IntersectionObserver(entries => {
         entries.forEach(entry => {
           if (entry.isIntersecting) {
             const img = entry.target;
             const videoId = img.dataset.videoid;
-
             const iframe = document.createElement("iframe");
             iframe.src = `https://www.youtube.com/embed/${videoId}`;
             iframe.allowFullscreen = true;
-
             const wrapper = img.parentElement;
             wrapper.innerHTML = "";
             wrapper.appendChild(iframe);
-
             img.dataset.loaded = "true";
             observer.unobserve(img);
           }
@@ -244,6 +239,22 @@
       }, { rootMargin: "200px 0px" });
 
       lazyElements.forEach(el => observer.observe(el));
+    }
+
+    // Hover preview function
+    function addHoverPreview(videoItem, videoId) {
+      videoItem.addEventListener("mouseenter", () => {
+        if (!videoItem.querySelector("iframe.preview")) {
+          const iframe = document.createElement("iframe");
+          iframe.className = "preview";
+          iframe.src = `https://www.youtube.com/embed/${videoId}?autoplay=1&mute=1&controls=0&modestbranding=1&loop=1&playlist=${videoId}`;
+          videoItem.appendChild(iframe);
+        }
+      });
+      videoItem.addEventListener("mouseleave", () => {
+        const preview = videoItem.querySelector("iframe.preview");
+        if (preview) preview.remove();
+      });
     }
 
     // Infinite scroll logic
@@ -265,6 +276,5 @@
     window.addEventListener("load", checkIfNeedMoreVideos);
 
   </script>
-
 </body>
 </html>
