--- a/index.html
+++ b/index.html
@@ -50,12 +50,19 @@
       margin-bottom: 1rem;
     }
 
-    /* Responsive grid */
+    /* Responsive grid with max 4 columns */
     .video-list {
       display: grid;
       gap: 1rem;
       padding: 0 1rem;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      justify-content: center;
+    }
+
+    @media (min-width: 1024px) {
+      .video-list {
+        grid-template-columns: repeat(4, 1fr); /* max 4 columns on large screens */
+      }
     }
 
     .video-item {
